2005-06-14  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Anonymous.h, Atlas/Objects/Dispatcher.cpp,
	  Atlas/Objects/Dispatcher.h, Atlas/Objects/ObjectsFwd.h,
	  Atlas/Objects/Operation.h, Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,
	  Atlas/Objects/RootOperationChildren4.cpp,
	  Atlas/Objects/RootOperationChildren5.cpp,
	  Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate sources with updated spec, to include Affect operation.
	  Add new Objects getAttr method version, which avoids return by
	  value.

2005-06-14  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py,
	  Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/RootOperation.h, Atlas/Objects/flag.cpp,
	  Atlas/Objects/objectFactory.cpp, Atlas/Objects/objectFactory.h,
	  tests/Objects/objects2.cpp: Remove obsolete
	  messageElement2ClassObject().

2005-06-10  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, NEWS: Increment version to 0.5.96, add news entry.

	* Release 0.5.95, Interface version 0.

2005-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am, configure.ac, Atlas/Makefile.am,
	  Atlas/Utilities/Makefile.am, Atlas/Utilities/atlas_convert.cpp,
	  tools/Makefile.am, tools/atlas_convert.cpp: Move atlas_convert
	  out of the library tree into a tools directory of its own.

	* atlas-cpp.spec.in: Remove dependency on libstdc++ package.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Anonymous.h, Atlas/Objects/Dispatcher.cpp,
	  Atlas/Objects/Dispatcher.h, Atlas/Objects/ObjectsFwd.h,
	  Atlas/Objects/Operation.h, Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,
	  Atlas/Objects/RootOperationChildren4.cpp,
	  Atlas/Objects/RootOperationChildren5.cpp,
	  Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate objects included new Wield and Use ops from
	  the updated spec.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>
